fix header styles. add z-index to menu. add header id to header HTML and re-add missing styles

--- a/source/sass/layout/_glenpark.scss
+++ b/source/sass/layout/_glenpark.scss
@@ -138,6 +138,7 @@ h6 { font-size: 10px; text-transform: uppercase; }
 	height: 100px;
 	width: 960px;
 	top: 400px;
+	z-index: 1;
 }
 
 #menu li {
