--- a/source/sass/layout/_header.scss
+++ b/source/sass/layout/_header.scss
@@ -1,3 +1,40 @@
+#header {
+  color: #ffffff;
+  width: 100%;
+  height: 500px;
+  background-color: #000000;
+  background-image: url($site-url + $images + 'bg2.jpg');
+  background-repeat: no-repeat;
+  background-position: center top;
+  position: relative;
+  margin: 0 auto;
+}
+
+#header a {
+  color: #ffffff;
+  position: relative;
+}
+#header a:hover { color: #424242; }
+
+#header-border {
+  height: 3px;
+  overflow: hidden;
+  width: 100%;
+  position: absolute;
+  z-index: 11;
+  margin: 0 auto;
+}
+
+#header .wrapper {
+  padding-top: 0px;
+  position: relative;
+  z-index: 2;
+  height: 500px;
+  margin: 0 auto;
+  width: 960px;
+}
+
+
 .header {
   &__menu {
     width: 100%;
